# SpiRIT_G4simulator

./: .gitignore  README.md  recompile.sh  setup.sh
SpiRIT_G4simulator/: CMakeLists.txt  main.cc  vis.mac  vis.mac.batch  vis.mac.test
SpiRIT_G4simulator/include/: KatanaMScintiSD.hh  KatanaVScintiSD.hh  KyotoScintiSD.hh  SActionInitialization.hh  SDetectorConstruction.hh  SDetectorParameterDef.hh  SEventAction.hh  SHICEvtInterface.hh  SHistoManager.hh  SMagField.hh  SPhysicsList.hh  SPrimaryGeneratorAction.hh  SRegionInformation.hh  SRunAction.hh  SSteppingAction.hh  STrackInformation.hh  STrackingAction.hh  ScintillatorHit.hh  SpiRITSD.hh  TrackerHit.hh
SpiRIT_G4simulator/src/: KatanaMScintiSD.cc  KatanaVScintiSD.cc  KyotoScintiSD.cc  SActionInitialization.cc  SDetectorConstruction.cc  SDetectorParameterDef.icc  SEventAction.cc  SHICEvtInterface.cc  SHistoManager.cc  SMagField.cc  SPhysicsList.cc  SPrimaryGeneratorAction.cc  SRegionInformation.cc  SRunAction.cc  SSteppingAction.cc  STrackInformation.cc  STrackingAction.cc  ScintillatorHit.cc  SpiRITSD.cc  TrackerHit.cc
SpiRIT_G4simulator/util/: CMakeLists.txt  PhitsParticle.cc  PhitsParticle.hh  STSimParticle.cc  STSimParticle.hh  STSimScintillator.cc  STSimScintillator.hh  STSimTracking.cc  STSimTracking.hh  linkdef.hh
